--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
+  "homepage": "https://covtuntolya.github.io/sneakers/",
   "keywords": [
     "react",
     "starter"
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "1.6.2",
+    "gh-pages": "^6.1.0",
     "loader-utils": "3.2.1",
     "macro-css": "1.0.5",
     "node-sass": "9.0.0",
     "react": "18.2.0",
+    "react-content-loader": "6.2.1",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "1.6.2",
     "react-router-dom": "6.20.0",
-    "react-content-loader": "6.2.1"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -27,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "homepage": "https://covtuntolya.github.io/sneakers/"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
